--- a/index.html
+++ b/index.html
@@ -18,91 +18,91 @@
 	</header>
 	<section>
 
-	<a name="party" class="anchor"> </a>
-	<h1>Ceremony and Party!</h1>
-	<img src="https://farm6.staticflickr.com/5457/9316412989_5d71aa9857_z.jpg">
-	<div>
-		<p>
-			We’ll be saying the “I dos (heck yeahs!)” and celebrating at <a href="http://eventsatthefarm.com">Khimaira Farm</a> near Luray, Virginia at <strong>6PM on July 3rd</strong>. After getting engaged in the nearby Shenandoah Valley and spending many weekends away from DC in the area, we wanted to share its beauty with you. We hope you can join us for the wedding!
-		</p>
-		<p>
-			<h2>Khimaira Farm</h2>
-			2974 Stonyman Road<br />
-			Luray, VA 22835<br />
-			(540) 743-4628<br />
-			<a href="http://eventsatthefarm.com">http://eventsatthefarm.com</a>
-		</p>
-		<p>
-			Khimaira is a working goat farm and events space set against the beautiful Blue Ridge Mountains. Yes, baby goats will be available post-ceremony for your Instagram feeds.
-		</p>
-		<p>
-			The outdoor ceremony will be followed by a cocktail hour + dinner + dancing + bonfire + all the croquet and cornhole you want.
-		</p>
-		<h2>Dresscode</h2>
- 		<p>
-			Semiformal, but be comfortable. When selecting your footwear, keep in mind that this is an outdoor ceremony requiring a short saunter across a field.
-		</p>
-		<p>
-			Shuttle transportation to the ceremony will be available from the main hotel, the Mimslynn Inn.
-		</p>
-	</div>
+		<a name="party" class="anchor"> </a>
+		<h1>Ceremony and Party!</h1>
+		<img src="/img/party.jpg">
+		<div>
+			<p>
+				We’ll be saying the “I dos (heck yeahs!)” and celebrating at <a href="http://eventsatthefarm.com">Khimaira Farm</a> near Luray, Virginia at <strong>6PM on July 3rd</strong>. After getting engaged in the nearby Shenandoah Valley and spending many weekends away from DC in the area, we wanted to share its beauty with you. We hope you can join us for the wedding!
+			</p>
+			<p>
+				<h2>Khimaira Farm</h2>
+				2974 Stonyman Road<br />
+				Luray, VA 22835<br />
+				(540) 743-4628<br />
+				<a href="http://eventsatthefarm.com">http://eventsatthefarm.com</a>
+			</p>
+			<p>
+				Khimaira is a working goat farm and events space set against the beautiful Blue Ridge Mountains. Yes, baby goats will be available post-ceremony for your Instagram feeds.
+			</p>
+			<p>
+				The outdoor ceremony will be followed by a cocktail hour + dinner + dancing + bonfire + all the croquet and cornhole you want.
+			</p>
+			<h2>Dresscode</h2>
+	 		<p>
+				Semiformal, but be comfortable. When selecting your footwear, keep in mind that this is an outdoor ceremony requiring a short saunter across a field.
+			</p>
+			<p>
+				Shuttle transportation to the ceremony will be available from the main hotel, the Mimslynn Inn.
+			</p>
+		</div>
 
 
-	<a name="hotels" class="anchor"> </a>
-	<h1>Lodging</h1>
-	<img src="https://farm6.staticflickr.com/5457/9316412989_5d71aa9857_z.jpg">
-	<div>
-		<p>
-		<strong><em>If you plan to attend the wedding, it is important to book your lodging accommodations early. Like right now!</em></strong>
-		<p>
-		Luray is a popular weekend destination - especially on holiday weekends - and we want to make sure you find a place.
-		</p>
-		<p>
-		<h2>Hotels</h2>
-		<p>Many wedding guests will be staying at the <a href="http://www.mimslyninn.com">Mimslyn Inn</a> and the <a href="http://book.bestwestern.com/bestwestern/US/VA/Luray-hotels/BEST-WESTERN-Intown-of-Luray/Hotel-Overview.do?propertyCode=4710">Best Western in downtown Luray</a> (across the street from each other). Shuttle service will available on the evening of the wedding to and from these hotels. Khaimaira (the venue) also has ample parking if you prefer to drive.</p>
-		<h2>Cabin and Home Rentals</h2>
-		<h3>Allstar Lodging</h3>
-		<p>
-		Find them online at: <a href="http://www.allstarlodging.com">www.allstarlodging.com</a> or call 1-866-780-7827
-		</p>
-		<p>
-		Many of the cabins will be listed as saying they are in Stanley, a neighboring town to Luray. Khimaira Farm is actually about halfway between Luray and Stanley so properties in Stanley are not far. The best way to book would be to call as they are very friendly and familiar with the area and know which cabins are closest to Khimaira Farm.
-		</p>
-		<h3>Vacation Rental by Owner (VRBO)</h3>
-		<p>
-		They also might have more flexibility since you’ll be working directly with the cabin owner as opposed to a management company. Find them online at: <a href="http://www.vrbo.com">www.vrbo.com</a>
-		</p>
+		<a name="hotels" class="anchor"> </a>
+		<h1>Lodging</h1>
+		<img src="/img/lodging.png">
+		<div>
+			<p>
+			<strong><em>If you plan to attend the wedding, it is important to book your lodging accommodations early. Like right now!</em></strong>
+			<p>
+			Luray is a popular weekend destination - especially on holiday weekends - and we want to make sure you find a place.
+			</p>
+			<p>
+			<h2>Hotels</h2>
+			<p>Many wedding guests will be staying at the <a href="http://www.mimslyninn.com">Mimslyn Inn</a> and the <a href="http://book.bestwestern.com/bestwestern/US/VA/Luray-hotels/BEST-WESTERN-Intown-of-Luray/Hotel-Overview.do?propertyCode=4710">Best Western in downtown Luray</a> (across the street from each other). Shuttle service will available on the evening of the wedding to and from these hotels. Khaimaira (the venue) also has ample parking if you prefer to drive.</p>
+			<h2>Cabin and Home Rentals</h2>
+			<h3>Allstar Lodging</h3>
+			<p>
+			Find them online at: <a href="http://www.allstarlodging.com">www.allstarlodging.com</a> or call 1-866-780-7827
+			</p>
+			<p>
+			Many of the cabins will be listed as saying they are in Stanley, a neighboring town to Luray. Khimaira Farm is actually about halfway between Luray and Stanley so properties in Stanley are not far. The best way to book would be to call as they are very friendly and familiar with the area and know which cabins are closest to Khimaira Farm.
+			</p>
+			<h3>Vacation Rental by Owner (VRBO)</h3>
+			<p>
+			They also might have more flexibility since you’ll be working directly with the cabin owner as opposed to a management company. Find them online at: <a href="http://www.vrbo.com">www.vrbo.com</a>
+			</p>
 
-		<h2>Bed and Breakfasts</h2>
-		<p>
-		There are several nice ones in Luray. Most are small and fill up fairly quickly. For a complete list checkout <a href="http://luraypage.com/places_to_stay_bed_and_breakfasts">www.luraypage.com/places_to_stay_bed_and_breakfasts</a>
-		</p>
+			<h2>Bed and Breakfasts</h2>
+			<p>
+			There are several nice ones in Luray. Most are small and fill up fairly quickly. For a complete list checkout <a href="http://luraypage.com/places_to_stay_bed_and_breakfasts">www.luraypage.com/places_to_stay_bed_and_breakfasts</a>
+			</p>
 
-		<h2>Camping</h2>
-		<p>
-Last but not least, you can camp! For those of you who want to spend more time outdoors, there are plenty of places both within Shenandoah National Park and around it. <a href="http://luraypage.com/places_to_stay-campgrounds">www.luraypage.com/places_to_stay-campgrounds</a>
-		</p>
-	</div>
+			<h2>Camping</h2>
+			<p>
+	Last but not least, you can camp! For those of you who want to spend more time outdoors, there are plenty of places both within Shenandoah National Park and around it. <a href="http://luraypage.com/places_to_stay-campgrounds">www.luraypage.com/places_to_stay-campgrounds</a>
+			</p>
+		</div>
 
-	<a name="travel" class="anchor"> </a>
-	<h1>Travel</h1>
-	<img src="https://farm6.staticflickr.com/5457/9316412989_5d71aa9857_z.jpg">
-	<div>
-		<p>If you’re flying, the best major airports to fly into are either Dulles International (IAD) which is about a 1.5 hr drive from Luray, or Reagan Washington National Airport (DCA) which is about a 2 hour drive from Luray.</p>
-	</div>
-
-	<a name="fun" class="anchor"> </a>
-	<h1>Fun</h1>
-	<img src="https://farm6.staticflickr.com/5457/9316412989_5d71aa9857_z.jpg">
-	<div>
-		<ul>
-			<li>The famous and gorgeous <a href="http://luraycaverns.com">Luray Caverns</a></li>
-			<li>Hiking, nature and more in beautiful <a href="http://www.nps.gov/shen/index.htm">Shenandoah National Park</a></li>
-			<li>Guided tours and things like <a href="http://luraypage.com/outdoor_fun">ziplining and rafting</a></li>
-			<li>Another great resource for fun <a href="http://www.virginia.org">VirginiaISH things to do</a></li>
-		</ul>
-	</div>
-
+		<a name="travel" class="anchor"> </a>
+		<h1>Travel</h1>
+		<img src="/img/travel.jpg">
+		<div>
+			<p>If you’re flying, the best major airports to fly into are either Dulles International (IAD) which is about a 1.5 hr drive from Luray, or Reagan Washington National Airport (DCA) which is about a 2 hour drive from Luray.</p>
+		</div>
+		
+		<a name="fun" class="anchor"> </a>
+		<h1>Fun</h1>
+		<img src="/img/fun.jpg">
+		<div>
+			<ul>
+				<li>The famous and gorgeous <a href="http://luraycaverns.com">Luray Caverns</a></li>
+				<li>Hiking, nature and more in beautiful <a href="http://www.nps.gov/shen/index.htm">Shenandoah National Park</a></li>
+				<li>Guided tours and things like <a href="http://luraypage.com/outdoor_fun">ziplining and rafting</a></li>
+				<li>Another great resource for fun <a href="http://www.virginia.org">VirginiaISH things to do</a></li>
+			</ul>
+		</div>
+	</section>
 </body>
 
 </html>
