--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 		<a name="party" class="anchor"> </a>
 		<h1>Ceremony and Party!</h1>
-		<img src="/img/party.jpg">
+		<img src="/img/card.png" class="right">
 		<div>
 			<p>
-				We’ll be saying the “I dos (heck yeahs!)” and celebrating at <a href="http://eventsatthefarm.com">Khimaira Farm</a> near Luray, Virginia at <strong>6PM on July 3rd</strong>. After getting engaged in the nearby Shenandoah Valley and spending many weekends away from DC in the area, we wanted to share its beauty with you. We hope you can join us for the wedding!
+				We’ll be saying the “I dos (heck yeahs!)” and celebrating at <a href="http://eventsatthefarm.com">Khimaira Farm</a> near Luray, Virginia at <strong>on July 3rd 2015</strong>. After getting engaged in the nearby Shenandoah Valley and spending many weekends away from DC in the area, we wanted to share its beauty with you. We hope you can join us for the wedding!
 			</p>
 			<p>
 				<h2>Khimaira Farm</h2>
@@ -50,7 +50,7 @@
 
 		<a name="hotels" class="anchor"> </a>
 		<h1>Lodging</h1>
-		<img src="/img/lodging.png">
+		<img src="/img/party.jpg">
 		<div>
 			<p>
 			<strong><em>If you plan to attend the wedding, it is important to book your lodging accommodations early. Like right now!</em></strong>
@@ -86,15 +86,11 @@
 
 		<a name="travel" class="anchor"> </a>
 		<h1>Travel</h1>
-		<img src="/img/travel.jpg">
-		<div>
+		<img src="/img/travel.jpg" class="right">
+		<div class="travel-fun">
 			<p>If you’re flying, the best major airports to fly into are either Dulles International (IAD) which is about a 1.5 hr drive from Luray, or Reagan Washington National Airport (DCA) which is about a 2 hour drive from Luray.</p>
-		</div>
-		
-		<a name="fun" class="anchor"> </a>
-		<h1>Fun</h1>
-		<img src="/img/fun.jpg">
-		<div>
+			<a name="fun" class="anchor"> </a>
+			<h1>Fun</h1>
 			<ul>
 				<li>The famous and gorgeous <a href="http://luraycaverns.com">Luray Caverns</a></li>
 				<li>Hiking, nature and more in beautiful <a href="http://www.nps.gov/shen/index.htm">Shenandoah National Park</a></li>
@@ -102,6 +98,7 @@
 				<li>Another great resource for fun <a href="http://www.virginia.org">VirginiaISH things to do</a></li>
 			</ul>
 		</div>
+		<br style="clear: both">
 	</section>
 </body>
 
