--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<img src="/img/card.png" class="right">
 		<div>
 			<p>
-				We’ll be saying the “I dos (heck yeahs!)” and celebrating at <a href="http://eventsatthefarm.com">Khimaira Farm</a> near Luray, Virginia at <strong>on July 3rd 2015</strong>. After getting engaged in the nearby Shenandoah Valley and spending many weekends away from DC in the area, we wanted to share its beauty with you. We hope you can join us for the wedding!
+				We’ll be saying the "I dos (heck yeahs!)" and celebrating at <a href="http://eventsatthefarm.com">Khimaira Farm</a> near Luray, Virginia at <strong>on July 3rd 2015</strong>. After getting engaged in the nearby Shenandoah Valley and spending many weekends away from DC in the area, we wanted to share its beauty with you. We hope you can join us for the wedding!
 			</p>
 			<p>
 				<h2>Khimaira Farm</h2>
