--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<nav>
-		<a href="#party">Ceremony</a>
-		<a href="#hotels">Lodging</a>
+		<a href="#party">Ceremony & Reception</a>
+		<a href="#accommodations">Accomodations</a>
 		<a href="#travel">Travel</a>
 		<a href="#fun">Fun</a>
 	</nav>
@@ -19,11 +19,11 @@
 	<section>
 
 		<a name="party" class="anchor"> </a>
-		<h1>Ceremony and Party!</h1>
-		<img src="/img/card.png" class="right">
+		<h1>Ceremony and Reception</h1>
+		<img src="/img/angelaswedding.jpg" class="right top">
 		<div>
 			<p>
-				We’ll be saying the "I dos (heck yeahs!)" and celebrating at <a href="http://eventsatthefarm.com">Khimaira Farm</a> near Luray, Virginia at <strong>on July 3rd 2015</strong>. After getting engaged in the nearby Shenandoah Valley and spending many weekends away from DC in the area, we wanted to share its beauty with you. We hope you can join us for the wedding!
+				We'll be saying the "I dos (heck yeahs!)" and celebrating at <a href="http://eventsatthefarm.com">Khimaira Farm</a> near Luray, Virginia on the <strong>evening of July 3rd, 2015</strong>. After getting engaged in the nearby Shenandoah Valley and spending many weekends away from DC in the area, we wanted to share its beauty with you. We hope you can join us for the wedding!
 			</p>
 			<p>
 				<h2>Khimaira Farm</h2>
@@ -43,14 +43,14 @@
 				Semiformal, but be comfortable. When selecting your footwear, keep in mind that this is an outdoor ceremony requiring a short saunter across a field.
 			</p>
 			<p>
-				Shuttle transportation to the ceremony will be available from the main hotel, the Mimslynn Inn.
+				Shuttle transportation to the ceremony will be available from the main hotel, the Mimslyn Inn.
 			</p>
 		</div>
 
 
-		<a name="hotels" class="anchor"> </a>
-		<h1>Lodging</h1>
-		<img src="/img/party.jpg">
+		<a name="accommodations" class="anchor"> </a>
+		<h1>Accommodations</h1>
+		<img src="/img/party.jpg" class="right">
 		<div>
 			<p>
 			<strong><em>If you plan to attend the wedding, it is important to book your lodging accommodations early. Like right now!</em></strong>
@@ -60,6 +60,26 @@
 			<p>
 			<h2>Hotels</h2>
 			<p>Many wedding guests will be staying at the <a href="http://www.mimslyninn.com">Mimslyn Inn</a> and the <a href="http://book.bestwestern.com/bestwestern/US/VA/Luray-hotels/BEST-WESTERN-Intown-of-Luray/Hotel-Overview.do?propertyCode=4710">Best Western in downtown Luray</a> (across the street from each other). Shuttle service will available on the evening of the wedding to and from these hotels. Khaimaira (the venue) also has ample parking if you prefer to drive.</p>
+
+			<br style="clear: both" />
+			<div class="hotels">
+				<div>
+					<h3>The Mimslyn Inn</h3>
+					<p>
+					540.743.5105<br />
+					<a href="http://www.mimslyninn.com">http://www.mimslyninn.com</a>
+					</p>
+				</div>
+				<div>
+					<h3>Best Western of Luray</h3>
+					<p>
+					540.743.6511<br />
+					<a href="http://book.bestwestern.com/bestwestern/US/VA/Luray-hotels/BEST-WESTERN-Intown-of-Luray/Hotel-Overview.do?propertyCode=47104&cm_mmc=PTI-_-local-_-feed-_-47104">http://book.bestwestern.com</a>
+					</p>
+				</div>
+			</div>
+			<br style="clear: both" />
+
 			<h2>Cabin and Home Rentals</h2>
 			<h3>Allstar Lodging</h3>
 			<p>
@@ -70,7 +90,7 @@
 			</p>
 			<h3>Vacation Rental by Owner (VRBO)</h3>
 			<p>
-			They also might have more flexibility since you’ll be working directly with the cabin owner as opposed to a management company. Find them online at: <a href="http://www.vrbo.com">www.vrbo.com</a>
+			They also might have more flexibility since you'll be working directly with the cabin owner as opposed to a management company. Find them online at: <a href="http://www.vrbo.com">www.vrbo.com</a>
 			</p>
 
 			<h2>Bed and Breakfasts</h2>
@@ -88,7 +108,7 @@
 		<h1>Travel</h1>
 		<img src="/img/travel.jpg" class="right">
 		<div class="travel-fun">
-			<p>If you’re flying, the best major airports to fly into are either Dulles International (IAD) which is about a 1.5 hr drive from Luray, or Reagan Washington National Airport (DCA) which is about a 2 hour drive from Luray.</p>
+			<p>If you're flying, the best major airports to fly into are either Dulles International (IAD) which is about a 1.5 hr drive from Luray, or Reagan Washington National Airport (DCA) which is about a 2 hour drive from Luray.</p>
 			<a name="fun" class="anchor"> </a>
 			<h1>Fun</h1>
 			<ul>
